# CppDevLibs

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
modules/: CMakeLists.txt  boost.cmake  googletest.cmake  libevent.cmake  openssl.cmake  thrift.cmake
settings/: build.cmake  install.cmake  user_options.cmake
settings/definitions/: architecture.cmake  compiler_flags.cmake  requirements.cmake
